--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fullcalendar/daygrid": "5.8.0",
+    "@fullcalendar/icalendar": "5.8.0",
     "@fullcalendar/react": "5.8.0"
   }
 }
