--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "dependencies": {
     "@fullcalendar/core": "5.9.0",
     "@fullcalendar/daygrid": "5.9.0",
-    "@fullcalendar/timegrid": "5.9.0",
-    "@fullcalendar/list": "5.9.0",
     "@fullcalendar/icalendar": "5.9.0",
-    "@fullcalendar/react": "5.9.0"
+    "@fullcalendar/list": "5.9.0",
+    "@fullcalendar/react": "5.9.0",
+    "@fullcalendar/timegrid": "5.9.0"
   },
   "devDependencies": {
-    "cypress": "7.7.0"
+    "cypress": "11.1.0"
   }
 }
