--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@fullcalendar/icalendar": "5.9.0",
     "@fullcalendar/list": "5.9.0",
     "@fullcalendar/react": "5.9.0",
-    "@fullcalendar/timegrid": "5.9.0"
+    "@fullcalendar/timegrid": "5.9.0",
+    "node-polyfill-webpack-plugin": "3.0.0"
   },
   "devDependencies": {
     "cypress": "11.1.0"
