--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@fullcalendar/timegrid": "5.9.0"
   },
   "devDependencies": {
-    "cypress": "11.1.0",
-    "@plone/scripts": "^3.0.0"
+    "@plone/scripts": "^3.0.0",
+    "cypress": "13.12.0"
   }
 }
